// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions custodianStatesUpdate 1`] = `
Object {
  "type": "custodianStates",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions getCustodianStates 1`] = `
Array [
  Object {
    "type": "custodianStates",
    "value": Object {
      "test": "test",
    },
  },
]
`;
